All sculpted details are lost on save when Multiresolution modifier is copied from another object #101008

Closed
opened 2022-09-12 15:11:18 +02:00 by Omar Emara · 6 comments
Member

System Information
Operating system: Windows 11
Graphics card: GTX 1060

Blender Version
Broken: 3.3.0 / 3.2.0 / 2.93.10
Worked: (First time trying multires hasn't worked on any of the versions I've tested on)

Short description of error

Report is split from #100985. All sculpted details are lost on save when Multiresolution modifier is copied from another object.

Exact steps for others to reproduce the error

  • Add a Cube (#1)
  • Add Multiresolution modifier to Cube (#1)
  • Subdivide 4 times
  • Add a Cube (#2)
  • Copy Cube (#1)'s modifier onto Cube (#2) through the use of Link/Transfer Data > Copy Modifier
  • Select Cube (#2) and enter sculpt mode
  • Select SculptDraw Brush and make a stroke (or any other brush I believe)
  • Save Blender file
  • Move camera (Should undo every detail made in sculpt mode)
**System Information** Operating system: Windows 11 Graphics card: GTX 1060 **Blender Version** Broken: 3.3.0 / 3.2.0 / 2.93.10 Worked: (First time trying multires hasn't worked on any of the versions I've tested on) **Short description of error** Report is split from #100985. All sculpted details are lost on save when Multiresolution modifier is copied from another object. **Exact steps for others to reproduce the error** - Add a Cube (#1) - Add Multiresolution modifier to Cube (#1) - Subdivide 4 times - Add a Cube (#2) - Copy Cube (#1)'s modifier onto Cube (#2) through the use of Link/Transfer Data > Copy Modifier - Select Cube (#2) and enter sculpt mode - Select SculptDraw Brush and make a stroke (or any other brush I believe) - Save Blender file - Move camera (Should undo every detail made in sculpt mode)
Author
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @ReonPG

Added subscriber: @ReonPG

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

This issue was referenced by 3d3c34f345

This issue was referenced by 3d3c34f345c766daabb56a453f8c8ef7bead801b
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-09-12 19:40:08 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101008
No description provided.